src/css/styles.css
*{
padding: 0;
margin: 0;
box-sizing: border-box;
font-family: 'Poppins', sans-serif;
list-style: none;
text-decoration: none;
}

header{
  position: fixed;
  right: 0;
  top: 0;
  z-index: 1000;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 33px 9%;
  background: transparent;
}

section{
  padding: 0 19%;
}
.logo{
  font-size: 30px;
  font-weight: 700;
  color: black;
}

.navlist{
  display: flex;
}

.navlist a{
  color:black;
  margin-left: 60px;
  font-size: 15px;
  font-weight: 600;
  border-bottom: 2px solid transparent;
  transition: all .55s ease;
}

.navlist a:hover{
  border-bottom: 2px solid black;
}

#menu-icon{
  color: black;
  font-size: 30px;
  z-index: 10001;
  cursor: pointer;
  display: none;
}
.klutzyboy{
  height: 100%;
  width: 100%;
  min-height: 100vh;
  background: linear-gradient(245.59deg,  #d9d9d9 5%,#e6e6e6 28.53%, #ffffff 75.52%);
  position: relative;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  align-items: center;
  gap: 2rem;
}

.klutzyboy-text h5{
  font-size: 14px;
  font-weight: 400;
  color:black;
  margin-bottom: 40px;
}

.klutzyboy-text h4{
  font-size: 18px;
  font-weight: 600;
  color: black;
  margin-bottom: 10px;

}

.klutzyboy-text p{
  color: black;
  font-size: 15px;
  line-height: 1.9;
  margin-bottom: 40px;
}

.klutzyboy-text h1{
  font-family: 'Comforter', cursive;
  font-size: 100px;
  line-height: 1;
  color: greenyellow;
  margin: 0 0 45px;

}

.klutzyboy-img img{
  width: 700px;
  height: auto;
}

.klutzyboy-text a{
  display: inline-block;
  color: black;
  background:orange;
  border: 1px solid transparent;
  padding: 12px 30px;
  line-height: 1.4;
  font-size: 14px;
  font-weight: 500;
  border-radius: 30px;
  text-transform: uppercase;
  transition: all .55s ease;
}

.klutzyboy-text a:hover{
 background: transparent;
 border: 1px solid greenyellow; 
 transform: translateX(8px);
}

.klutzyboy-text a.ctaa{
  background: transparent;
  border: 1px solid black;
  margin-left: 20px;
}

.klutzyboy-text a.ctaa i{
  vertical-align: middle;
  margin-right: 5px;
}

.icons {
  position: absolute;
  top: 50%;
  padding: 0 9%;
 transform: translateY(-50%);
}

.icons i{
  display: block;
  margin: 26px 0;
  font-size: 35px;
  color: black;
  transition: all .50s ease;
}

.icons i:hover{
  color:coral;
  transform: translateY(-5px);
}

.scroll-down{
  position: absolute;
  z-index: 10003;
  bottom: 6%;
  right: 9%;
}
.scroll-down i{
  display: block;
  padding: 12px;
  font-size: 35px;
  color:white;
  background-color: orange;
  border-radius: 25px;
  transition: all .50s ease;
}

.scroll-down i:hover{
transform: translateY(-8px);
}

footer{
  display: none;
  position: fixed;
  right: 0;
  bottom: 0;
  z-index: 10002;
  width: 100%;
  padding: 33px 9%;
  background: linear-gradient(to right, #f2994a, #f2c94c);
}

footer.open{
  display: flex;
}

footer > ul{
  flex-direction: row;
  align-items: center;
  align-content: center;

}

.footer-navlist{
  display: flex;
}

.footer-navlist a{
  color:whitesmoke;
  margin: 60px;
  font-size: 15px;
  font-weight: 600;
  border-bottom: 2px solid transparent;
  transition: all .55s ease;
}

.footer-navlist a:hover{
 font-size: 18px;
 color: black;
}

@media (max-width: 1535px){
  header{
     padding: 15px 3%;
     transition: .2s;
  }
  .icons{
    padding: 0 3%;
    transition: .2s;
  }
  .scroll-down{
    right: 3%;
    transition: .2s;
  }
}

@media (max-width: 1460px){
  section{
    padding: 0 12%;
    transition: .2s;
  }
}

@media (max-width: 1340px){
  .klutzyboy-img img{
    width: 100%;
    height: auto;
  }

  .klutzyboy-text h1{
    font-size: 75px;
    margin: 0 0 30px;
  }

  .klutzyboy-text h5{
    margin-bottom: 25px;
  }
}

@media (max-width: 1195px){
  section{
    padding: 0 3%;
    transition: .2s;
  }

  .klutzyboy-text{
    padding-top: 115px;
  }

  .klutzyboy-img{
    width: 70%;
    text-align: center;
  }

  .klutzyboy-img img{
    width: 560px;
    height: auto;
  }

  .klutzyboy{
    height: 100%;
    gap: 1rem;
    grid-template-columns: 1fr;
  }

  .icons{
    display: none;
  }

  .scroll-down{
    display: flex;
    position: initial;
  }

  .scroll-down i{
    padding: 6px;
    font-size: 7px;
  }
}

@media (max-width: 990px){
  #menu-icon{
    display: block;
  }

  #footer-icon{
    display: none;
  }

  footer{
    display: flex;
  }
  
  .footer-navlist{
    flex-direction: column;
    align-items: center;
  }
  .navlist{
    position: absolute;
    top: 100%;
    right: -100%;
    width: 300px;
    height: 40vh;
    background: orange;
    display: flex;
    align-items: center;
    flex-direction: column;
    padding: 50px 20px;
    transition: all .5s ease;
  }

  .navlist a{
    margin-left: 0;
    display: block;
    margin: 7px 0;
  }

  .navlist.open{
    right: 0;
  }
}

@media (max-width: 680px){
  .klutzyboy-img img{
    width: 100%;
    height: auto;
  }
}

